[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
winit = { workspace = true }
image = { workspace = true }
collections = { path = "../collections" }
bytemuck =  { workspace = true }
cgmath = { workspace = true }
log = { workspace = true }
pollster = "0.4.0"
wgpu = { workspace = true }
