[package]
name = "wimpy-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
bytemuck = {version = "1.24.0",features = ["derive"]}
cgmath = "0.18.0"
slotmap = "1.1.1"
smallvec = "1.15.1"
bitflags = "2.10.0"
gltf = { version = "1", features = ["utils"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
