[package]
name = "wimpy-native"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
wimpy-engine = { path = "../wimpy-engine" }
env_logger = { version = "0.11.8" }
pollster = "0.4.0"
image = "0.25.9"

[dependencies.sdl2]
version = "0.38"
default-features = false
features = [ "static-link", "use-vcpkg", "raw-window-handle" ]
