[package]
name = "wimpy-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
wimpy-engine = { path = "../wimpy-engine" }

wasm-bindgen = "0.2"
wasm-bindgen-futures ="0.4"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "Window",
    "Document"
]}
js-sys = "0.3"
