[package]
name = "wimpy-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true, features = ["webgl"]}
wimpy-engine = { path = "../wimpy-engine" }
wasm-bindgen = "0.2.108"
wasm-bindgen-futures ="0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Event",
    "HtmlCanvasElement",
    "KeyboardEvent",
    "MouseEvent",
    "Window",
    "ImageBitmap",
]}
console_error_panic_hook = "0.1.7"
console_log = "1.0"
phf = { version = "0.13.1", features = ["macros"] }
serde-wasm-bindgen = "0.6.5"
