[package]
name = "wimpy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
image = { workspace = true }
generational-arena = "0.2"
wgpu = { workspace = true }
log = { workspace = true }
bytemuck =  { workspace = true }
cgmath = { workspace = true }
pollster = "0.4.0"
winit = { workspace = true }
slotmap = "1.1.1"
smallvec = "1.15.1"
